tests/typechecker/unary-operators-03.expect
tests/typechecker/unary-operators-03.prog:3:4: error: expected 'bool', but got 'u6'
