tests/typechecker/unary-operators-03.prog
main: proc() void
{
  !42;
}
